# langchain-openai-api-bridge

./: .env.example  .flake8  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  publish.yml
langchain_openai_api_bridge/assistant/: __init__.py  assistant_api_binding.py  assistant_app.py  assistant_lib_injector.py  assistant_message_api.py  assistant_message_service.py  assistant_run_api.py  assistant_run_service.py  assistant_stream_event_adapter.py  assistant_thread_api.py  assistant_thread_service.py  create_thread_api_dto.py  create_thread_message_api_dto.py  create_thread_runs_api_dto.py  openai_message_factory.py  openai_run_factory.py
langchain_openai_api_bridge/assistant/adapter/: container.py  langchain_input_content_adapter.py  langgraph_event_to_openai_assistant_event_stream.py  on_chat_model_end_handler.py  on_chat_model_stream_handler.py  on_tool_end_handler.py  on_tool_start_handler.py  openai_event_factory.py  openai_message_content_adapter.py  openai_message_factory.py  thread_run_event_handler.py  thread_to_langchain_input_messages_service.py
langchain_openai_api_bridge/assistant/repository/: __init__.py  assistant_message_repository.py  assistant_run_repository.py  assistant_thread_repository.py  in_memory_message_repository.py  in_memory_run_repository.py  in_memory_thread_repository.py  message_repository.py  run_repository.py  thread_repository.py
langchain_openai_api_bridge/chat_completion/: chat_completion_chunk_choice_adapter.py  chat_completion_chunk_object_factory.py  chat_completion_compatible_api.py  chat_completion_object_factory.py  content_adapter.py  langchain_invoke_adapter.py  langchain_stream_adapter.py
langchain_openai_api_bridge/chat_model_adapter/: __init__.py  anthropic_openai_chat_model.py  anthropic_openai_compatible_chat_model_adapter.py  anthropic_openai_message_adapter.py  base_openai_compatible_chat_model_adapter.py  default_openai_compatible_chat_model_adapter.py  openai_compatible_chat_model.py  url_extractor.py
langchain_openai_api_bridge/chat_model_adapter/anthropic/: __init__.py  anthropic_openai_compatible_chat_model.py  anthropic_openai_compatible_chat_model_adapter.py
langchain_openai_api_bridge/chat_model_adapter/llamacpp/: __init__.py  llamacpp_openai_compatible_chat_model.py  llamacpp_openai_compatible_chat_model_adapter.py
langchain_openai_api_bridge/core/: __init__.py  agent_factory.py  base_agent_factory.py  chat_completion_chunk_choice_adapter.py  chat_completion_compatible_api.py  create_agent_dto.py  create_llm_dto.py  function_agent_factory.py  langchain_invoke_adapter.py  langchain_openai_api_bridge.py  langchain_openai_compatible_api.py  langchain_stream_adapter.py  role_adapter.py
langchain_openai_api_bridge/fastapi/: __init__.py  add_assistant_routes.py  add_chat_completions_agent_routes.py  assistant_api_router.py  assistant_route_builder.py  chat_completion_route_builder.py  chat_completion_router.py  internal_agent_factory.py  langchain_openai_api_bridge_fastapi.py  token_getter.py
langchain_openai_bridge/core/: chat_completion_chunk_choice_adapter.py  chat_completion_chunk_object_factory.py  chat_completion_object_factory.py  http_stream_response_adapter.py  langchain_invoke_adapter.py  langchain_openai_compatible_api.py  langchain_stream_adapter.py  response_factory.py
langchain_openai_bridge/fastapi/: add_chat_completions_agent_routes.py
tests/: stream_utils.py  test_example.py
tests/core/: test_chat_completion_chunk_object_factory.py  test_langchain_stream_adapter.py  test_response_factory.py
tests/fastapi/: test_token_getter.py
tests/test_functional/: assistant_stream_utils.py  tiny_di_container.py
(+99 files in other folders)
