[tool.poetry]
name = "langchain-openai-api-bridge"
version = "0.6.3"
description = "A bridge to use Langchain output as an OpenAI-compatible API."
authors = ["Samuel Magny <samuelint@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/samuelint/langchain-openai-api-bridge"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = "^0.2.2"
langchain-openai = "^0.1.8"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
langgraph = "^0.0.62"
openai = "^1.35.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
validators = "^0.28.3"
pytest-mock = "^3.14.0"


[tool.poetry.group.test.dependencies]
langchain-anthropic = "^0.1.15"
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"
pytest-watch = "^4.2.0"
decoy = "^2.1.1"
injector = "^0.21.0"
fastapi-injector = { version = "^0.6.0", python = ">=3.9,<3.13" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
